Added ElephantSQL service

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,7 @@
 applications:
-- disk_quota: 1024M
+- services:
+  - ElephantSQL -r3
+  disk_quota: 1024M
   host: itucsdb1737
   name: itucsdb1737
   path: .
